# ecommerce_back

./: main.py  pyproject.toml
app/connection/: database.py
app/controllers/: cart_controller.py  categoria_controller.py  order_controller.py  product_controller.py  question_controller.py  review_controller.py  role_controller.py  subcategory_controller.py  user_controller.py
app/models/: cart_model.py  categoria_model.py  order_model.py  product_model.py  question_model.py  review_model.py  role_model.py  subcategory_model.py  user_model.py
app/repositories/: cart_repository.py  categoria_repository.py  order_repository.py  product_repository.py  question_repository.py  review_repository.py  role_repository.py  subcategory_repository.py  user_repository.py
app/services/: cart_service.py  categoria_service.py  order_service.py  product_service.py  question_service.py  review_service.py  role_service.py  subcategory_service.py  user_service.py
app/utils/: jwt_middleware.py  openapi_schema.py  settings.py
